--- a/fe/package.json
+++ b/fe/package.json
@@ -3,21 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^3.8.2",
+    "material-ui": "^1.0.0-beta.36",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "reselect": "^3.0.1",
+    "rxjs": "^5.5.6",
+    "typeface-roboto": "0.0.45"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.0",
-    "@types/node": "^9.4.6",
-    "@types/react": "^16.0.40",
-    "@types/react-dom": "^15.5.7",
-    "typescript": "^2.7.2"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "react-scripts": "1.1.1"
+  },
+  "proxy": {
+    "/ws": {
+      "target": "ws://localhost:8080/rv",
+      "ws": true
+    }
   }
 }
