--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,11 @@
     <modules>
         <module>view</module>
         <module>webwar</module>
+        <module>sample-app</module>
     </modules>
 
     <properties>
+        <guice.version>4.1.0</guice.version>
         <junit.jupiter.version>5.0.2</junit.jupiter.version>
         <junit.platform.version>1.1.0</junit.platform.version>
         <jackson.version>2.8.5</jackson.version>
@@ -23,7 +25,12 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>4.1.0</version>
+            <version>${guice.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-servlet</artifactId>
+            <version>${guice.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -59,6 +66,12 @@
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-guice</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.websocket</groupId>
