--- a/fe/package.json
+++ b/fe/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
     "immutable": "^3.8.2",
     "material-ui": "^1.0.0-beta.36",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -17,9 +19,9 @@
     "typeface-roboto": "0.0.45"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "node ./webpack.setup.js && react-scripts start",
+    "build": "node ./webpack.setup.js && react-scripts build",
+    "test": "node ./webpack.setup.js && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
