--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.6",
     "typeface-roboto": "0.0.45"
